Fixed stats alignment.

--- a/website/static/css/feedback.css
+++ b/website/static/css/feedback.css
@@ -21,15 +21,14 @@
     position: relative;
 }
 
-.avg_reviews {
+.feedback-card {
     border: none;
-    width: 10vw;
+    width: min-content;
     height: 4vh;
     position: relative;
     top: 2%;
     left: 10%;
     padding: 12px 40px;
-    font-family: 'Sans-Regular';
     cursor: pointer;
     background: var(--bg-primary);
     color: rgb(0, 0, 0);
@@ -47,15 +46,23 @@
     flex-direction: row;
 }
 
-
-.avg_reviews:before {
-    content: "Avg. Rating: ";
-    text-align: left;
-    display: block;
-    font-size: small;
+.feedback-text {
+    display: flex;
+    flex-direction: column;
 }
 
-.avg_reviews img {
+.feedback-title {
+    font-family: "Poppins-Light";
+}
+
+.feedback-secondary {
+    font-family: "Poppins-Bold";
+    flex: auto;
+    justify-content: right;
+    text-align: right;
+}
+
+.feedback-img {
     width: auto;
     height: auto;
     position: relative;
@@ -64,169 +71,13 @@
 }
 
 
-.revenue {
-    border: none;
-    width: 10vw;
-    height: 4vh;
-    position: relative;
-    top: 2%;
-    left: 10%;
-    padding: 12px 40px;
-    font-family: 'Sans-Regular';
-    cursor: pointer;
-    background: var(--bg-primary);
-    color: rgb(0, 0, 0);
-    letter-spacing: 0.2px;
-    font-size: medium;
-    outline: 0;
-    -webkit-transition: all .6s;
-    transition: all .6s;
-    border-radius: 15px;
-    text-align: left;
-    box-shadow: 3px 3px 3px rgb(187, 187, 187);
-    margin: 15px 10px 1px;
-    display: flex;
-    flex-direction: row;
-}
 
 
-.revenue:before {
-    content: "Daily Revenue: ";
-    text-align: left;
-    display: block;
-    font-size: small;
-}
-
-.revenue img {
-    width: auto;
-    height: auto;
-    position: relative;
-    left: 20%;
-    margin-left: 10%;
-}
-
-.popular_food {
-    border: none;
-    width: 10vw;
-    height: 4vh;
-    position: relative;
-    top: 2%;
-    left: 10%;
-    padding: 12px 40px;
-    font-family: 'Sans-Regular';
-    cursor: pointer;
-    background: var(--bg-primary);
-    color: rgb(0, 0, 0);
-    letter-spacing: 0.2px;
-    font-size: medium;
-    outline: 0;
-    -webkit-transition: all .6s;
-    transition: all .6s;
-    border-radius: 15px;
-    text-align: left;
-    box-shadow: 3px 3px 3px rgb(187, 187, 187);
-    margin: 15px 10px 1px;
-    margin-right: 15px;
-    display: flex;
-    flex-direction: row;
-}
 
 
-.popular_food:before {
-    content: "Most Popular Food:";
-    text-align: left;
-    display: block;
-    font-size: x-small;
-}
-
-.popular_food img {
-    width: auto;
-    height: auto;
-    position: relative;
-    left: 20%;
-    margin-left: 15%;
-}
-
-.popular_drink {
-    border: none;
-    width: 10vw;
-    height: 4vh;
-    position: relative;
-    top: 2%;
-    left: 10%;
-    padding: 12px 40px;
-    font-family: 'Sans-Regular';
-    cursor: pointer;
-    background: var(--bg-primary);
-    color: rgb(0, 0, 0);
-    letter-spacing: 0.2px;
-    font-size: small;
-    outline: 0;
-    -webkit-transition: all .6s;
-    transition: all .6s;
-    border-radius: 15px;
-    box-shadow: 3px 3px 3px rgb(187, 187, 187);
-    margin: 15px 10px 1px;
-    margin-right: 15px;
-    display: flex;
-    flex-direction: row;
-}
 
 
-.popular_drink:before {
-    content: "Most Popular Drink:";
-    text-align: left;
-    display: block;
-    font-size: x-small;
-}
 
-.popular_drink img {
-    width: auto;
-    height: auto;
-    position: relative;
-    left: 20%;
-    margin-left: 10%;
-}
-
-.cust_seated {
-    border: none;
-    width: 10vw;
-    height: 4vh;
-    position: relative;
-    top: 2%;
-    left: 10%;
-    padding: 12px 40px;
-    font-family: 'Sans-Regular';
-    cursor: pointer;
-    background: var(--bg-primary);
-    color: rgb(0, 0, 0);
-    letter-spacing: 0.2px;
-    font-size: medium;
-    outline: 0;
-    -webkit-transition: all .6s;
-    transition: all .6s;
-    border-radius: 15px;
-    box-shadow: 3px 3px 3px rgb(187, 187, 187);
-    margin: 15px 10px 1px;
-    display: flex;
-    flex-direction: row;
-}
-
-
-.cust_seated:before {
-    content: "Customers Seated:";
-    text-align: left;
-    display: block;
-    font-size: x-small;
-}
-
-.cust_seated img {
-    width: auto;
-    height: auto;
-    position: relative;
-    left: 25%;
-    margin-left: 10%;
-}
 .feedback-visuals {
     height: 70vh;
     position: relative;
@@ -237,7 +88,7 @@
 .daily_cust {
     border: none;
     width: 50vw;
-    height: 50vh;
+    height: 60vh;
     position: relative;
     padding: 12px 40px;
     font-family: 'Sans-Regular';
@@ -261,7 +112,7 @@
 .popular_dishes {
     border: none;
     width: 25vw;
-    height: 50vh;
+    height: 60vh;
     position: relative;
     padding: 12px 40px;
     font-family: 'Sans-Regular';
@@ -289,7 +140,7 @@
     margin-left: 13%;
     max-width:fit-content;
     position: relative;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .scrollmsg {
